--- a/drivers/net/mlx5/meson.build
+++ b/drivers/net/mlx5/meson.build
@@ -21,6 +21,7 @@ sources = files(
 	'mlx5_flow_flex.c',
 	'mlx5_mac.c',
 	'mlx5_rss.c',
+	'mlx5_rx.c',
 	'mlx5_rxmode.c',
 	'mlx5_rxq.c',
 	'mlx5_rxtx.c',
