common/mlx5: share list and hash list tool
In order to use the list and hash list defined in net in other drivers, the
lists are moved to common utilities.

In addition, the log definition was moved from the common utilities to
a dedicated new log file in common in order to prevent a conflict.

Signed-off-by: Shiri Kuzin <shirik@nvidia.com>
Acked-by: Matan Azrad <matan@nvidia.com>

--- a/drivers/common/mlx5/meson.build
+++ b/drivers/common/mlx5/meson.build
@@ -10,13 +10,14 @@ endif
 config_flag_fmt = 'RTE_LIBRTE_@0@_COMMON'
 deps += ['hash', 'pci', 'bus_pci', 'bus_auxiliary', 'net', 'eal', 'kvargs']
 sources += files(
-	'mlx5_devx_cmds.c',
-	'mlx5_common.c',
-	'mlx5_common_mp.c',
-	'mlx5_common_mr.c',
-	'mlx5_malloc.c',
-	'mlx5_common_pci.c',
-	'mlx5_common_devx.c',
+        'mlx5_devx_cmds.c',
+        'mlx5_common.c',
+        'mlx5_common_mp.c',
+        'mlx5_common_mr.c',
+        'mlx5_malloc.c',
+        'mlx5_common_pci.c',
+        'mlx5_common_devx.c',
+        'mlx5_common_utils.c',
 )
 
 cflags_options = [
