--- a/app/test/meson.build
+++ b/app/test/meson.build
@@ -65,6 +65,7 @@ test_sources = files('commands.c',
 	'test_interrupts.c',
         'test_ipfrag.c',
 	'test_ipsec.c',
+	'test_malloc_perf.c',
 	'test_ipsec_sad.c',
 	'test_ipsec_perf.c',
 	'test_kni.c',
@@ -76,6 +77,7 @@ test_sources = files('commands.c',
 	'test_lpm6_perf.c',
 	'test_lpm_perf.c',
 	'test_malloc.c',
+	'test_malloc_perf.c',
 	'test_mbuf.c',
 	'test_member.c',
 	'test_member_perf.c',
@@ -272,6 +274,7 @@ fast_tests = [
 
 perf_test_names = [
         'ring_perf_autotest',
+        'malloc_perf_autotest',
         'mempool_perf_autotest',
         'memcpy_perf_autotest',
         'hash_perf_autotest',
