mlx5dr: Matcher support step 2
-Connect the matchers
-Allocate RTC

Signed-off-by: Alex Vesker <valex@nvidia.com>

--- a/drivers/net/mlx5/steering/meson.build
+++ b/drivers/net/mlx5/steering/meson.build
@@ -5,6 +5,7 @@ includes += include_directories('.')
 sources += files(
 	'mlx5dr_context.c',
 	'mlx5dr_table.c',
+	'mlx5dr_matcher.c',
 	'mlx5dr_cmd.c',
 )
 
