mlx5dr: Temp - Add some test file
This will be in build/app/dpdk-test-mlx5
in case you used meson build.

This should not be part of our code.

Signed-off-by: Alex Vesker <valex@nvidia.com>

--- a/app/meson.build
+++ b/app/meson.build
@@ -19,7 +19,8 @@ apps = [
 	'test-pipeline',
 	'test-pmd',
 	'test-regex',
-	'test-sad']
+	'test-sad',
+	'test-mlx5']
 
 default_cflags = machine_args + ['-DALLOW_EXPERIMENTAL_API']
 default_ldflags = []
