--- a/drivers/net/mlx5/steering/meson.build
+++ b/drivers/net/mlx5/steering/meson.build
@@ -6,6 +6,8 @@ sources += files(
 	'mlx5dr_context.c',
 	'mlx5dr_table.c',
 	'mlx5dr_matcher.c',
+	'mlx5dr_rule.c',
+	'mlx5dr_action.c',
 	'mlx5dr_pool.c',
 	'mlx5dr_cmd.c',
 	'mlx5dr_send.c',
