net/mlx5: add basic shared Rx queue support
This patch introduces basic shared RXQ definition and operations.
All share Rx queues with same group and queue id shares same rxq_ctrl.

Signed-off-by: Xueming Li <xuemingl@nvidia.com>

--- a/doc/guides/nics/features/mlx5.ini
+++ b/doc/guides/nics/features/mlx5.ini
@@ -11,6 +11,7 @@ Removal event        = Y
 Rx interrupt         = Y
 Fast mbuf free       = Y
 Queue start/stop     = Y
+Shared Rx queue      = Y
 Burst mode info      = Y
 MTU update           = Y
 Jumbo frame          = Y
