pydiru: create a new API wrapper for mlx5 HW steering
Introduce PythonDirectRules, AKA Pydiru (stylized as PyDiRu), a python
package wrapper for mlx5 HW steering internal functions.
pydiru is written in Cython language, which designed to give C-like
performance, and is used to wrap C functions and export a python API
that can be used for testing purposes.

The package is not installed by default, the user must pass
"pydiru" flag to the meson build command, and should have Cython and
Python3 in order to install it.

Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,9 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright(c) 2017-2019 Intel Corporation
 
-project('DPDK', 'C',
+project('DPDK',
+	run_command('meson', '--version').stdout().version_compare('< 0.59.0') or \
+		not find_program('cython', required:false).found() ? 'C' : ['C', 'Cython'],
 	# Get version number from file.
 	# Fallback to "more" for Windows compatibility.
 	version: run_command(find_program('cat', 'more'),
@@ -48,6 +50,9 @@ subdir('config')
 subdir('buildtools/pmdinfogen')
 subdir('lib')
 subdir('drivers')
+
+# build pydiru
+subdir('pydiru')
 
 # build binaries and installable tools
 subdir('usertools')
