app: add rte flow testing code
This is some testing code will be removed later.

Signed-off-by: Suanming Mou <suanmingm@nvidia.com>

--- a/app/test-mlx5/meson.build
+++ b/app/test-mlx5/meson.build
@@ -12,6 +12,7 @@ sources = files(
 	'mlx5dr_test_post_send.c',
 	'mlx5dr_test_pattern_args.c',
 	'mlx5dr_test_pool.c',
+	'mlx5dr_test_rte_insert.c',
 )
 else
 	sources = files('mlx5dr_test_dummy.c')
