mlx5dr: Add a test for mlx5dr_pool module
Add a basic test that check the two kinds of pools.

Signed-off-by: Erez Shitrit <erezsh@mellanox.com>

--- a/app/test-mlx5/meson.build
+++ b/app/test-mlx5/meson.build
@@ -6,6 +6,7 @@ sources = files(
 	'mlx5dr_test_rule_insert.c',
 	'mlx5dr_test_post_send.c',
 	'mlx5dr_test_pattern_args.c',
+	'mlx5dr_test_pool.c',
 )
 
 deps += ['ethdev']
