--- a/drivers/net/mlx5/meson.build
+++ b/drivers/net/mlx5/meson.build
@@ -18,6 +18,7 @@ sources = files(
 	'mlx5_flow_dv.c',
 	'mlx5_flow_verbs.c',
 	'mlx5_flow_aso.c',
+	'mlx5_flow_flex.c',
 	'mlx5_mac.c',
 	'mlx5_mr.c',
 	'mlx5_rss.c',
