debian: fix missing runtime pkg contents
mlnx-dpdk.deb is runtime package which needs to include all shared
libraries and ldconfig setting.

And the development package (mlnx-dpdk-dev) should only include header
files and unversioned .so for developer, which means mlnx-dpdk-dev.deb
needs depends on mlnx-dpdk.deb.

Fixes: 6b26361f42c1 ("pkg: add rpm and debian build")

Signed-off-by: Xiaoyu Min <jackmin@nvidia.com>

--- a/debian/control
+++ b/debian/control
@@ -46,8 +46,6 @@ Depends: hwdata,
 Recommends: python3-pyelftools,
 Suggests: mlnx-dpdk-doc,
           linux-image-generic,
-Breaks: mlnx-dpdk-dev (<< 18.11),
-Replaces: mlnx-dpdk-dev (<< 18.11),
 Description: Data Plane Development Kit (runtime)
  DPDK is a set of libraries for fast packet processing. Applications run
  in user-space and communicate directly with dedicated network interfaces.
@@ -77,7 +75,8 @@ Section: libdevel
 Architecture: amd64 arm64 armhf i386 ppc64el
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends},
-Depends: libbsd-dev,
+Depends: mlnx-dpdk,
+         libbsd-dev,
          libibverbs-dev,
          libmnl-dev,
          libnuma-dev,
