debian: fix missing dependency for devel package
The libelf-dev and libjasson-dev as dependency is missed for
mlnx-dpdk-dev.deb.

Fixes: 6b26361f42c1 ("pkg: add rpm and debian build")

Signed-off-by: Xiaoyu Min <jackmin@nvidia.com>

--- a/debian/control
+++ b/debian/control
@@ -83,6 +83,8 @@ Depends: mlnx-dpdk,
          libpcap-dev,
          libssl-dev,
          zlib1g-dev,
+	 libelf-dev,
+	 libjansson-dev,
          ${misc:Depends},
 Description: Data Plane Development Kit (basic development files)
  DPDK is a set of libraries for fast packet processing. Applications run
