pydiru: add Mlx5drTable class
Add Mlx5drTable class to represent mlx5dr_table.

Signed-off-by: Daria Velikovsky <daria@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/pydiru/providers/mlx5/steering/meson.build
+++ b/pydiru/providers/mlx5/steering/meson.build
@@ -5,6 +5,8 @@ includes += global_inc
 
 pydiru_cython_modules = [
     'mlx5dr_context.pyx',
+    'mlx5dr_enums.pyx',
+    'mlx5dr_table.pyx'
 ]
 
 pydiru_python_modules = [
