test: add devargs test cases
Initial version to test global devargs syntax.

Signed-off-by: Xueming Li <xuemingl@nvidia.com>

--- a/app/test/meson.build
+++ b/app/test/meson.build
@@ -32,6 +32,7 @@ test_sources = files('commands.c',
 	'test_cryptodev_security_pdcp.c',
 	'test_cycles.c',
 	'test_debug.c',
+        'test_devargs.c',
 	'test_distributor.c',
 	'test_distributor_perf.c',
 	'test_eal_flags.c',
@@ -190,6 +191,7 @@ fast_tests = [
         ['cpuflags_autotest', true],
         ['cycles_autotest', true],
         ['debug_autotest', true],
+        ['devargs_autotest', true],
         ['eal_flags_c_opt_autotest', false],
         ['eal_flags_main_opt_autotest', false],
         ['eal_flags_n_opt_autotest', false],
