pydiru-tests: add utils.py to HW steering tests
Implement basic functions for traffic execution.

Signed-off-by: Maxim Chicherin <maximc@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/app/test-mlx5-pydiru/meson.build
+++ b/app/test-mlx5-pydiru/meson.build
@@ -17,7 +17,8 @@ pydiru_python_tests = [
     'args_parser.py',
     'base.py',
     'prm_structs.py',
-    'run_tests.py'
+    'run_tests.py',
+    'utils.py'
 ]
 
 
