pydiru-tests: add HW steering TIR test
Add test to match on smac with TIR action and packet validation.

Signed-off-by: Maxim Chicherin <maximc@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/app/test-mlx5-pydiru/meson.build
+++ b/app/test-mlx5-pydiru/meson.build
@@ -18,6 +18,7 @@ pydiru_python_tests = [
     'base.py',
     'prm_structs.py',
     'run_tests.py',
+    'test_mlx5dr_actions.py',
     'utils.py'
 ]
 
