--- a/debian/rules
+++ b/debian/rules
@@ -82,10 +82,18 @@ ifneq (,$(filter dpdk_config_options=%,$(DEB_BUILD_OPTIONS)))
     DPDK_CONFIG_OPTIONS ?= $(subst $(comma),$(space),$(patsubst dpdk_config_options=%,%,$(filter dpdk_config_options=%,$(DEB_BUILD_OPTIONS))))
 endif
 
+DPDK_ENABLED_DRVS := "bus/pci,bus/auxiliary,bus/vdev,"
+DPDK_ENABLED_DRVS := "mempool/bucket,mempool/ring,mempool/stack,$(DPDK_ENABLED_DRVS)"
+DPDK_ENABLED_DRVS := "common/mlx5,$(DPDK_ENABLED_DRVS)"
+DPDK_ENABLED_DRVS := "net/mlx5,net/vhost,net/virtio,net/af_packet,$(DPDK_ENABLED_DRVS)"
+DPDK_ENABLED_DRVS := "vdpa/mlx5,regex/mlx5,compress/mlx5,$(DPDK_ENABLED_DRVS)"
+DPDK_ENABLED_DRVS := "gpu/cuda,$(DPDK_ENABLED_DRVS)"
+DPDK_DISABLED_DRVS := $(shell . ./debian/get-disabled-drivers.sh; disable_drivers $(DPDK_ENABLED_DRVS))
+
 # Change default max ethports to 1024
 DPDK_CONFIG_OPTIONS += -Dmax_ethports=1024
 
-DPDK_CONFIG_OPTIONS += -Ddisable_drivers=regex/octeontx2,common/octeontx2,common/octeontx,compress/octeontx,crypto/octeontx,crypto/octeontx2,event/octeontx,event/octeontx2,mempool/octeontx,mempool/octeontx2,net/octeontx,net/octeontx2,raw/octeontx2_dma,raw/octeontx2_ep
+DPDK_CONFIG_OPTIONS += -Ddisable_drivers=$(DPDK_DISABLED_DRVS)
 
 DPDK_CONFIG_OPTIONS += -Dmachine=default
 
