pydiru-tests: add matcher tests
Add tests that match on IPv4, TCP and UDP headers.

Signed-off-by: Ido Kalir <idok@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/app/test-mlx5-pydiru/meson.build
+++ b/app/test-mlx5-pydiru/meson.build
@@ -19,6 +19,7 @@ pydiru_python_tests = [
     'prm_structs.py',
     'run_tests.py',
     'test_mlx5dr_actions.py',
+    'test_mlx5dr_matchers.py',
     'utils.py'
 ]
 
