--- a/app/test-mlx5/meson.build
+++ b/app/test-mlx5/meson.build
@@ -1,7 +1,10 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright(c) 2020 Mellanox Technologies, Ltd
 
-if get_option('default_library') == 'static'
+dlopen_ibverbs = (get_option('ibverbs_link') == 'dlopen')
+static_build = (get_option('default_library') == 'static')
+
+if static_build and not dlopen_ibverbs
 sources = files(
 	'mlx5dr_test.c',
 	'mlx5dr_test_rule_insert.c',
