pydiru: add required includes to the meson.build
Add some missing includes that are required for current and future
internal functions to pydiru infrastructure.

Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/pydiru/meson.build
+++ b/pydiru/meson.build
@@ -31,6 +31,14 @@ endif
 
 
 includes += global_inc
+includes += include_directories(
+'../lib/librte_ethdev/', '../../lib/librte_ethdev/',
+'../lib/librte_net/', '../../lib/librte_net/',
+'../lib/librte_mbuf/', '../../lib/librte_mbuf/',
+'../lib/librte_mempool/', '../../lib/librte_mempool/',
+'../lib/librte_meter/', '../../lib/librte_meter/',
+'../lib/librte_ring', '../../lib/librte_ring')
+
 
 pydiru_cython_modules = [
 	'base.pyx',
