pydiru-tests: add FDB tests
Add FDB test to verify action vport and matching on sqn.
Add FDB test to verify matching on source port.

Signed-off-by: Daria Velikovsky <daria@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/app/test-mlx5-pydiru/meson.build
+++ b/app/test-mlx5-pydiru/meson.build
@@ -20,6 +20,7 @@ pydiru_python_tests = [
     'run_tests.py',
     'test_mlx5dr_actions.py',
     'test_mlx5dr_control_path.py',
+    'test_mlx5dr_fdb.py',
     'test_mlx5dr_matchers.py',
     'test_mlx5dr_rules.py',
     'utils.py'
