pydiru-tests: add coverage to multi queue rules creation
Add modify shared action test which include rules creation
in different queue IDs.

Signed-off-by: Hadas Abraham <habraham@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/app/test-mlx5-pydiru/meson.build
+++ b/app/test-mlx5-pydiru/meson.build
@@ -21,6 +21,7 @@ pydiru_python_tests = [
     'test_mlx5dr_actions.py',
     'test_mlx5dr_control_path.py',
     'test_mlx5dr_matchers.py',
+    'test_mlx5dr_rules.py',
     'utils.py'
 ]
 
