pydiru: adjust Cython to support static global C vars
Since pydiru uses internal (mlx5 HWS) functions it must be compiled
against the relevant static libraries.
But pydiru tests are in python, hence pydiru is built as shared
libraries, which creates issues with the statically linked libraries in
some cases, for example when using global (extern) variables in C that
are shared among different modules or C files.
To solve that issue, a new main mlx5dr Cython module is introduced in
pydiru that wraps all the mlx5dr library functions in order to create
one shared library, and only this library uses the internal functions
directly.

Signed-off-by: Daria Velikovsky <daria@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/pydiru/providers/mlx5/meson.build
+++ b/pydiru/providers/mlx5/meson.build
@@ -1,20 +1,27 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright (c) 2021, Nvidia Inc. All rights reserved.
 
+includes += global_inc
 
 pydiru_cython_modules = [
+	'mlx5.pyx'
 ]
 
 pydiru_python_modules = [
     '__init__.py'
 ]
 
+link_libs = []
+if get_option('default_library') == 'static'
+	link_libs = dpdk_static_libraries + dpdk_drivers
+endif
 
 foreach pyx_file:pydiru_cython_modules
 	python3.extension_module(
 		pyx_file.split('.')[0],
 		pyx_file,
 		dependencies : py3_dep,
+		link_whole: link_libs,
 		include_directories : includes,
 		install_dir : python3.get_path('platlib') + '/pydiru/providers/mlx5',
 		install : true
