app: add option to compile disabled compilation apps
This is useful in case we have app that is disabled by default, and
we want to allow the user to enable this app compilation at the run
time.

Usage example:
APP_X is application in /apps that the compile flag for it is False.
To compile DPDK with this APP_X use:

meson -Dapps=<APP_X> build; ninja -C build

Signed-off-by: Wisam Jaddo <wisamm@nvidia.com>

--- a/app/meson.build
+++ b/app/meson.build
@@ -23,6 +23,11 @@ apps = [
 	'test-sad',
 	'test-mlx5']
 
+extra_apps = run_command(list_dir_globs, get_option('apps'), check: true).stdout().split()
+if extra_apps.length() >= 1 and extra_apps[0] != '.'
+	apps = apps + extra_apps
+endif
+
 default_cflags = machine_args + ['-DALLOW_EXPERIMENTAL_API']
 default_ldflags = []
 if get_option('default_library') == 'static' and not is_windows
