app/testpmd: register driver specific commands
Introduce a testpmd API so that drivers can register specific commands.

A driver can list some files to compile with testpmd, by setting them
in the testpmd_sources (driver local) meson variable.
drivers/meson.build then takes care of appending this to a global meson
variable, and adding the driver to testpmd dependency.

Note: testpmd.h is fixed to that it is self sufficient when being
included.

Signed-off-by: David Marchand <david.marchand@redhat.com>
Acked-by: Thomas Monjalon <thomas@monjalon.net>
Acked-by: Andrew Rybchenko <andrew.rybchenko@oktetlabs.ru>

--- a/app/test-pmd/meson.build
+++ b/app/test-pmd/meson.build
@@ -66,6 +66,8 @@ if jansson_dep.found()
     dpdk_conf.set('RTE_HAS_JANSSON', 1)
     ext_deps += jansson_dep
 endif
-if dpdk_conf.has('RTE_NET_MLX5')
-    deps += 'net_mlx5'
-endif
+
+# Driver-specific commands are located in driver directories.
+includes = include_directories('.')
+sources += testpmd_drivers_sources
+deps += testpmd_drivers_deps
