mlx5dr: Action, Support pop-Vlan action
Introducing pop-Vlan action.

Signed-off-by: Erez Shitrit <erezsh@nvidia.com>

--- a/app/test-mlx5/meson.build
+++ b/app/test-mlx5/meson.build
@@ -13,6 +13,7 @@ sources = files(
 	'mlx5dr_test_pattern_args.c',
 	'mlx5dr_test_pool.c',
 	'mlx5dr_test_rte_insert.c',
+	'mlx5dr_test_vlan_action.c',
 )
 else
 	sources = files('mlx5dr_test_dummy.c')
