--- a/examples/meson.build
+++ b/examples/meson.build
@@ -44,6 +44,7 @@ all_examples = [
 	'vhost_blk', 'vm_power_manager',
 	'vm_power_manager/guest_cli',
 	'vmdq', 'vmdq_dcb',
+	'vrdma',
 ]
 
 # on install, skip copying all meson.build files
